# sphinxify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sphinxify.py
.github/workflows/: pythonpackage.yml
tests/: test.sh
tests/expected/: enum_inline.txt  html_whitespace.txt  link_class_javadoc.txt  multiple_single_line.txt  note_multiline.txt  note_one_line.txt  param_no_indent.txt  simple_maths.txt  snake_case_words.txt  tag_soup.txt  trailing_underscores.txt
tests/input/: enum_inline.txt  html_whitespace.txt  link_class_javadoc.txt  multiple_single_line.txt  note_multiline.txt  note_one_line.txt  param_no_indent.txt  simple_maths.txt  tag_soup.txt  trailing_underscores.txt  underscore_word.txt
