[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sphinxify"
author = "David Vo"
author-email = "david@vovo.id.au"
home-page = "https://github.com/auscompgeek/sphinxify"
license = "BSD-3-Clause"
requires-python = ">=3.6"
requires = [
	"dataclasses; python_version < '3.7'",
]
description-file = "README.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
]
keywords = "javadoc sphinx doxygen"

[tool.flit.scripts]
sphinxify = "sphinxify:main"
