[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinxify"
authors = [
	{ name = "David Vo", email = "david@vovo.id.au" },
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.6"
dependencies = [
	"dataclasses; python_version < '3.7'",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
keywords = ["javadoc", "sphinx", "doxygen"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/auscompgeek/sphinxify"

[project.scripts]
sphinxify = "sphinxify:main"

[tool.ruff]
select = ["E", "F", "B", "B90", "UP", "C4", "I001", "SIM"]
ignore = ["E501"]
target-version = "py37"
